reorganisation avancement seg

--- a/binarisation/Makefile
+++ b/binarisation/Makefile
@@ -7,17 +7,17 @@ CFLAGS= -Wall -Wextra -Werror -std=c99 -O3
 LDFLAGS=
 LDLIBS= `pkg-config --libs sdl` -lSDL_image
 
-all: display grayscale
+all: display binarisation
 
 display: display.o
-grayscale: pixel_operations.o grayscale.o
+binarisation: pixel_operations.o binarisation.o
 
-grayscale.o: pixel_operations.h
+binarisation.o: pixel_operations.h
 
 clean:
 	${RM} *.o
 	${RM} *.d
 	${RM} display
-	${RM} grayscale
+	${RM} binarisation
 
 # END
