testxycut still has pbs but fewer than b4

--- a/segmentation/Makefile
+++ b/segmentation/Makefile
@@ -5,9 +5,11 @@ main: segmentationXY.o main.o
 
 segmentationXY.o: segmentationXY.c
 	gcc -c segmentationXY.c
+	gcc -IC segmentation.c
 
 main.o: main.c segmentationXY.h
 	gcc -c main.c
+	gcc -IC main.c
 
 clean:
 	rm -f *.o
