test XY commencés

--- a/segmentation/testxycut/Makefile
+++ b/segmentation/testxycut/Makefile
@@ -1,21 +1,24 @@
-# Simple SDL mini Makefile
 
 CC=gcc
 
 CPPFLAGS= `pkg-config --cflags sdl` -MMD
-CFLAGS= -Wall -Wextra -std=c99 -O3
+CFLAGS= -Wall -Wextra -Werror -std=c99 -O3
 LDFLAGS=
 LDLIBS= `pkg-config --libs sdl` -lSDL_image
 
 all: testxycut
 
-testxycut: pixel_operations.o testxycut.o matrix.o
+testxycut: ../../Tools/pixel_operations.o testxycut.o ../../Tools/matrix.o ../../Tools/tree.o ../../pré-traitement/binarisation/binarisation.o ../rlsa.o ../segmentationXY.o ../resizeMatrix.o
 
-testxycut/.o: pixel_operations.h matrix.h
+testxycut/.o: pixel_operations.h textxycut.h matrix.h tree.h binarisation.h rlsa.h segmentationXY.h resizeMatrix.h
 
 clean:
 	${RM} *.o
 	${RM} *.d
+	${RM} ../*.o
+	${RM} ../*.d
+	${RM} ../../Tools/*.o
+	${RM} ../../Tools/*.d
+	${RM} ../../pré-traitement/binarisation/*.o
+	${RM} ../../pré-traitement/binarisation/*.d
 	${RM} testxycut
-
-# END
