ca avance xycut a afficher

--- a/pré-traitement/traitement/Makefile
+++ b/pré-traitement/traitement/Makefile
@@ -1,7 +1,5 @@
 # Simple SDL mini Makefile
-IDIR =../../Tools/Matrix.h ../../Tools/pixel_operations.c
 CC=gcc
-
 CPPFLAGS= `pkg-config --cflags sdl` -MMD
 CFLAGS= -Wall -Wextra -Werror -std=c99 -O3
 LDFLAGS=
@@ -9,13 +7,15 @@ LDLIBS= `pkg-config --libs sdl` -lSDL_image
 
 all: traitement
 
-traitement= ../../../Tools/Matrix.o ../../../Tools/pixel_operationss.o ../../../Tools/help4display.o  main4trait.o  
-traitement.o: ../../../Tools/Matrix.h ../../../Tools/pixel_operations.h ../../../Tools/help4display.h ../traitement.h
+traitement: ../../Tools/matrix.o ../../Tools/pixel_operations.o ../../Tools/help4display.o traitement.o ../binarisation/binarisation.o
+
+traitement/.o: matrix.h pixel_operations.h help4display.h traitement.h binarisation.h
 
 clean:
 	${RM} *.o
 	${RM} *.d
 	${RM} traitement
-
+	${RM} ../../Tools/*.o
+	${RM} ../../Tools/*.d
 
 # END
