--- a/réseau_de_neurones/CNN/Makefile
+++ b/réseau_de_neurones/CNN/Makefile
@@ -3,7 +3,7 @@ CC=gcc
 CPPFLAGS= `pkg-config --cflags sdl` -MMD
 CFLAGS= -Wall -Wextra -std=c99 -O3 -g
 LDFLAGS=
-LDLIBS= `pkg-config --libs sdl` -lSDL_image
+LDLIBS= `pkg-config --libs sdl` -lSDL_image -lm
 
 all: train2
 
