finish rebuild and resize

--- a/segmentation/testresize/Makefile
+++ b/segmentation/testresize/Makefile
@@ -1,4 +1,4 @@
-
+#Makefile Geoffroy
 CC=gcc
 
 CPPFLAGS= `pkg-config --cflags sdl` -MMD
@@ -6,15 +6,21 @@ CFLAGS= -Wall -Wextra -Werror -std=c99 -O3
 LDFLAGS=
 LDLIBS= `pkg-config --libs sdl` -lSDL_image
 
-all: testresize
+all:
+	make testresize
+	mkdir rsltTst
+
+save:
+	cp *.bmp ../testresize/rsltTst
 
 testresize: ../../Tools/pixel_operations.o testresize.o ../../Tools/matrix.o ../../pré-traitement/binarisation/binarisation.o ../../Tools/minifunc.o ../resizeMatrix.o ../../Tools/image_operations.o
 
 testresize/.o: pixel_operations.h matrix.h binarisation.h resizeMatrix.h image_operations.h minifunc.h
 
-clean:
+trash:
 	${RM} *.o
 	${RM} *.d
+	${RM} *.bmp
 	${RM} ../*.o
 	${RM} ../*.d
 	${RM} ../../Tools/*.o
@@ -22,3 +28,12 @@ clean:
 	${RM} ../../pré-traitement/binarisation/*.o
 	${RM} ../../pré-traitement/binarisation/*.d
 	${RM} testresize
+
+clean:
+	make save
+	make trash
+
+clean_all:
+	make trash
+	${RM} ../testresize/rsltTst/*.bmp
+	rmdir rsltTst
