--- a/segmentation/testxycut/Makefile
+++ b/segmentation/testxycut/Makefile
@@ -7,9 +7,9 @@ LDLIBS= `pkg-config --libs sdl` -lSDL_image
 
 all: testxycut
 
-testxycut: ../../Tools/help4display.o ../../Tools/pixel_operations.o testxycut.o ../../Tools/matrix.o ../../Tools/tree.o ../../pré-traitement/binarisation/binarisation.o ../rlsa.o ../segmentationXY.o
+testxycut: ../../Tools/help4display.o ../../Tools/pixel_operations.o testxycut.o ../../Tools/matrix.o ../../Tools/tree.o ../../pré-traitement/binarisation/binarisation.o ../rlsa.o segmentationXYtest.o
 
-testxycut/.o:help4display.h pixel_operations.h textxycut.h matrix.h tree.h binarisation.h rlsa.h ../segmentationXY.h
+testxycut/.o:help4display.h pixel_operations.h textxycut.h matrix.h tree.h binarisation.h rlsa.h segmentationXYtest.h
 
 clean:
 	${RM} *.o
