--- a/assemblage/test/Makefile
+++ b/assemblage/test/Makefile
@@ -1,16 +1,15 @@
-
 CC=gcc
 
 CPPFLAGS= `pkg-config --cflags sdl` -MMD
-CFLAGS= -Wall -Wextra -Werror -std=c99 -O3
+CFLAGS= -Wall -Wextra -Werror -std=c99 -O3 
 LDFLAGS=
-LDLIBS= `pkg-config --libs sdl` -lSDL_image
+LDLIBS= `pkg-config --libs sdl` -lSDL_image -lm
 
 all: test
 
-test:  test.o ../assemblage.o  ../../Tools/help4display.o ../../Tools/pixel_operations.o  ../../Tools/matrix.o  ../../Tools/tree.o ../../pré-traitement/binarisation/binarisation.o ../../segmentation/rlsa.o  ../../segmentation/segmentationXY.o ../../Tools/minifunc.o ../../segmentation/resizeMatrix.o
+test:../../réseau_de_neurones/CNN/LeNet.o ../../réseau_de_neurones/CNN/RecogniseASCII.o ../../pré-traitement/Rotations/rotationAUTO.o ../../pré-traitement/Rotations/rotationMAN.o test.o ../assemblage.o  ../../Tools/help4display.o ../../Tools/pixel_operations.o  ../../Tools/matrix.o  ../../Tools/tree.o ../../pré-traitement/binarisation/binarisation.o ../../segmentation/rlsa.o  ../../segmentation/segmentationXY.o ../../Tools/minifunc.o ../../segmentation/resizeMatrix.o
 
-test/.o: assemblage.h help4display.h pixel_operations.h image_operations.h matrix.h tree.h binarisation.h rlsa.h segmentationXY.h minifunc.h resizeMatrix.h
+test/.o: RecogniseASCII.h rotationAUTO.h LeNet.h rotationMAN.h assemblage.h help4display.h pixel_operations.h image_operations.h matrix.h tree.h binarisation.h rlsa.h segmentationXY.h minifunc.h resizeMatrix.h
 
 clean:
 	${RM} *.o
@@ -25,6 +24,8 @@ clean:
 	${RM} ../../segmentation/*.d
 	${RM} ../../segmentation/testxycut/*.o
 	${RM} ../../segmentation/testxycut/*.d
+	${RM} ../pré-traitement/Rotations/*.o
+	${RM} ../pré-traitement/Rotations/*.d
 	${RM} test
 	${RM} new
 	${RM} testOCR
