--- a/interface/Makefile
+++ b/interface/Makefile
@@ -9,9 +9,9 @@ LDLIBS = `pkg-config --libs gtk+-3.0`  `pkg-config --libs sdl` -lSDL_image -lm
 
 all: main
 
-main: callback.o error.o  ../assemblage/assemblage.o ../Tools/help4display.o ../Tools/pixel_operations.o  ../Tools/matrix.o  ../Tools/tree.o ../pré-traitement/binarisation/binarisation.o ../segmentation/rlsa.o  ../segmentation/testxycut/segmentationXYtest.o ../Tools/minifunc.o ../segmentation/resizeMatrix.o  ../pré-traitement/traitement/testtraitement.o ../pré-traitement/traitement/traitement.o 
+main: ../pré-traitement/Rotations/rotationMAN.o ../pré-traitement/Rotations/rotationAUTO.o callback.o error.o  ../assemblage/assemblage.o ../Tools/help4display.o ../Tools/pixel_operations.o  ../Tools/matrix.o  ../Tools/tree.o ../pré-traitement/binarisation/binarisation.o ../segmentation/rlsa.o  ../segmentation/segmentationXY.o ../Tools/minifunc.o ../segmentation/resizeMatrix.o  ../pré-traitement/traitement/testtraitement.o ../pré-traitement/traitement/traitement.o ../réseau_de_neurones/CNN/LeNet.o ../../réseau_de_neurones/CNN/RecogniseASCII.o
 
-main/.o: callback.h error.h assemblage.h help4display.h pixel_operations.h image_operation.o matrix.h tree.h binarisation.h rlsa.h segmentationXYtest.h minifunc.h resizeMatrix.h testtraitement.h traitement.h
+main/.o: rotationMAN.h rotationAUTO.h callback.h error.h assemblage.h help4display.h pixel_operations.h image_operation.o matrix.h tree.h binarisation.h rlsa.h segmentationXY.h minifunc.h resizeMatrix.h testtraitement.h traitement.h LeNet.h RecogniseASCII.h
 clean:
 	${RM} *.o
 	${RM} *.d
@@ -27,6 +27,8 @@ clean:
 	${RM} ../segmentation/*.d
 	${RM} ../segmentation/testxycut/*.o
 	${RM} ../segmentation/testxycut/*.d
+	${RM} ../pré-traitement/Rotations/*.o
+	${RM} ../pré-traitement/Rotations/*.d
 	${RM} traitement_image.bmp
 	${RM} smooth.bmp
 	${RM} contrast.bmp
