--- a/pré-traitement/Rotations/testrotaMan/Makefile
+++ b/pré-traitement/Rotations/testrotaMan/Makefile
@@ -4,12 +4,11 @@ CC=gcc
 CPPFLAGS= `pkg-config --cflags sdl` -MMD
 CFLAGS= -Wall -Wextra -std=c99 -O3
 LDFLAGS=
-LDLIBS= `pkg-config --libs sdl` -lSDL_image
+LDLIBS= `pkg-config --libs sdl` -lSDL_image -lm
 
-all: main4man
+all: main
 
-main4man=  ../../../Tools/pixel_operations.o  ../../../Tools/image_operations.o ../rotationMAN.o  main4man.o -lm 
-main4man/.o: pixel_operations.h rotationMAN.h image_operations.h
+main= main.o 
 
 clean:
 	${RM} *.o
@@ -17,10 +16,6 @@ clean:
 	${RM} ../rotationMAN
 	${RM} ../*.o
 	${RM} ../*.d
-	${RM} ../../../Tools/*.o
-	${RM} ../../../Tools/*.d
-	${RM} ../../pré-traitement/binarisation/*.o
-	${RM} ../../pré-traitement/binarisation/*.d
-	${RM} main4man
+	${RM} main
 
 # END
